Fix table scroll
So the scrollbar doesn't show unnecessarily

--- a/public/css/_sass/_articles.scss
+++ b/public/css/_sass/_articles.scss
@@ -26,6 +26,10 @@ article {
 
   max-width: $max-content-width;
 
+  dt {
+    font-weight: bold;
+  }
+
   .table-wrapper {
     width: 100%;
     overflow-x: auto;
